// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders BuildOutput centered 1`] = `
<div>
  <div
    className="BuildOutput centered"
    onClick={[Function]}
  >
    <div
      className="minimize"
      onClick={[Function]}
    >
      ×
    </div>
    <Commit
      author_email="twfarnam@gmail.com"
      author_name="Tim Farnam"
      branch="master"
      build_output={null}
      build_status="pending"
      clear={[Function]}
      created_at="2017-07-01T22:47:58.810Z"
      id="004b6ed6-4106-42be-a975-89f7cb2ddfa6"
      message="changing this all around. open_iconic now just SVG
    "
      permission={true}
      repository_id="f2e8b08a-aceb-415a-9ff8-3efe1bc5757f"
      sha="16ad6335d2facd9a0f3e600cca9c77bf61017cb5"
    />
  </div>
  <Dimmer
    onClick={[Function]}
  />
</div>
`;

exports[`renders BuildOutput minimal 1`] = `
<div>
  <div
    className="BuildOutput minimized"
    onClick={[Function]}
  >
    <Commit
      author_email="twfarnam@gmail.com"
      author_name="Tim Farnam"
      branch="master"
      build_output={null}
      build_status="pending"
      clear={[Function]}
      created_at="2017-07-01T22:47:58.810Z"
      id="004b6ed6-4106-42be-a975-89f7cb2ddfa6"
      message="changing this all around. open_iconic now just SVG
    "
      permission={true}
      repository_id="f2e8b08a-aceb-415a-9ff8-3efe1bc5757f"
      sha="16ad6335d2facd9a0f3e600cca9c77bf61017cb5"
    />
  </div>
</div>
`;
